5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1575_2897.log
== TEST (2019-03-13 16:29:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 7
    print()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:29:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.155291
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    print()
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:29:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
print("quatro")
-- ERROR:
File "XXXX", line 7
    print("quatro")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:29:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
print("quatro")
-- EXECUTION TIME:
0.196952
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    print("quatro")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:29:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
print("4")
-- ERROR:
File "XXXX", line 7
    print("4")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:29:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
print("4")
-- EXECUTION TIME:
0.111113
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    print("4")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:30:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
int("4")
-- ERROR:
File "XXXX", line 7
    int("4")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:30:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("4")
			 
# Impressao do dobro do numero
int("4")
-- EXECUTION TIME:
0.137589
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    int("4")
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:30:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("4")
-- ERROR:
File "XXXX", line 7
    int("4")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:30:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("4")
-- ERROR:
File "XXXX", line 7
    int("4")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:30:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("4")
-- EXECUTION TIME:
0.233174
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    int("4")
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:30:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("quatro")
-- ERROR:
File "XXXX", line 7
    int("quatro")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:30:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("quatro")
-- ERROR:
File "XXXX", line 7
    int("quatro")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:31:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("quatro*2")
-- ERROR:
File "XXXX", line 7
    int("quatro*2")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:31:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("quatro*2")
-- EXECUTION TIME:
0.140766
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    int("quatro*2")
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:31:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("quatro")
			 
# Impressao do dobro do numero
int("quatro*2")
-- ERROR:
File "XXXX", line 7
    int("quatro*2")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:32:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
int("quatro*2")
-- ERROR:
File "XXXX", line 7
    int("quatro*2")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:32:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
int()
-- ERROR:
File "XXXX", line 7
    int()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:32:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
int()
-- EXECUTION TIME:
0.190757
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    int()
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:32:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input()
-- ERROR:
File "XXXX", line 7
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:32:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input("24")
-- ERROR:
File "XXXX", line 7
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:32:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input("12")
-- ERROR:
File "XXXX", line 7
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:33:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input("12")
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 7
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:33:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input("12")
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
			 
-- EXECUTION TIME:
0.182273
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    input()
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:33:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input("24")
-- ERROR:
File "XXXX", line 7
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:33:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12")
			 
# Impressao do dobro do numero
input("24")
-- EXECUTION TIME:
0.147451
-- ERROR:
  File "/home/codebench/codes/1575/2897/main.py", line 7
    input()
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:19:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
input("2*num")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:19:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
input("2*num")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:19:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
input("2*num")
-- EXECUTION TIME:
0.162829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:19:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
input(2*num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(2*num)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:19:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
input(2*num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(2*num)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:19:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
input(2*num)
-- EXECUTION TIME:
0.157539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    input(2*num)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:20:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
print(2*num)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:20:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("8"))
			 
# Impressao do dobro do numero
print(2*num)
-- EXECUTION TIME:
0.1696
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
